Game start functions added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Crystal Collector</title>
 </head>
 <body>
@@ -18,37 +19,25 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <h2><span id="crystal-number">0</span></h2>
+            <h2><span id="game-number"></span></h2>
         </div>
         <div class="col-sm-6">
-            <h2>Wins: <span id="wins-counter">0</span></h2>
-        </div>
+                <h2>Your total score: <span id="user-added-number">0</span></h2>
+            </div>
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <h2>Your total score: <span id="user-added-number">0</span></h2>
+            <h2>Wins: <span id="wins-counter">0</span></h2>
         </div>
         <div class="col-sm-6">
             <h2>Losses: <span id="losses-count">0</span></h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-3">
-            <img src="assets/images/green_rupee.jpg" class="img-fluid" alt="green-rupee">
-        </div>
-        <div class="col-sm-3">
-            <img src="assets/images/blue_rupee.jpg" class="img-fluid" alt="blue-rupee">
-        </div>
-        <div class="col-sm-3">
-            <img src="assets//images/red_rupee.jpg" class="img-fluid" alt="red_rupee">
-        </div>
-        <div  class="col-sm-3">
-            <img src="assets/images/yellow_rupee.jpg" class="img-fluid" alt="yellow_rupee"> 
-        </div>
+        <div class="col-sm-12 crystal-button"></div>
     </div>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </body>
