--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <h2><span id="game-number"></span>0</h2>
+            <h2><span id="game-number"></span></h2>
         </div>
         <div class="col-sm-6">
                 <h2>Your total score: <span id="user-added-number">0</span></h2>
