--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
     <title>Crystal Collector</title>
 </head>
 <body>
-<div class="container">
-    <div class="row justify-content-center">
-        <div clas="col-sm-12">
-            <h1>Crystal Collector Game</h1>
-        </div>
+
+    <div class="jumbotron">
+        <h1 class="text-center">Crystal Collector</h1>
     </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <h2><span id="game-number"></span></h2>
-        </div>
-        <div class="col-sm-6">
-                <h2>Your total score: <span id="user-added-number">0</span></h2>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 instructions">
+                <h3>How to Play</h3>
+                <p>Click to crystals until the target number is reached</p>
             </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <h2>Wins: <span id="wins-count">0</span></h2>
+            <div class= "col-sm-6">
+                <div class="row">
+                    <div class ="col-sm-6 target-number"><h4>Target Number: <span id="game-number"></span></h4></div>
+                    <div class="col-sm-6 total-score"><h4>Total Score: <span id="user-added-number">0</span></h4></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <h4 class="wins-loss">Wins: <span id="wins-count">0</span></h4>
+                        <h4 class="wins-loss">Losses: <span id="losses-count">0</span></h4>
+                    <div class="col-sm-8"></div>
+                    </div>
+                 </div>
+                <div class="row">
+                    <div class="col-sm-12 crystal-button"></div>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-6">
-            <h2>Losses: <span id="losses-count">0</span></h2>
-        </div>
     </div>
-    <div class="row">
-        <div class="col-sm-12 crystal-button"></div>
-    </div>
-</div>
 
 <script type="text/javascript" src="assets/javascript/game.js"></script>
 
