--- a/index.html
+++ b/index.html
@@ -17,26 +17,36 @@
     </div>
 
     <div class="container">
+
         <div class="row">
+
             <div class="col-sm-6 instructions">
                 <h3>How to Play</h3>
                 <p>Click to crystals until the target number is reached</p>
             </div>
+
             <div class= "col-sm-6">
+
                 <div class="row">
-                    <div class ="col-sm-6 target-number"><h4>Target Number: <span id="game-number"></span></h4></div>
-                    <div class="col-sm-6 total-score"><h4>Total Score: <span id="user-added-number">0</span></h4></div>
+                    <div class ="col-sm-12">
+                        <h4 class="target-number">Target Number: <span id="game-number"></span></h4>
+                        <h4 class="total-score">Total Score: <span id="user-added-number">0</span></h4>
+                    </div>
                 </div>
+    
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-12">
                         <h4 class="wins-loss">Wins: <span id="wins-count">0</span></h4>
                         <h4 class="wins-loss">Losses: <span id="losses-count">0</span></h4>
-                    <div class="col-sm-8"></div>
                     </div>
-                 </div>
-                <div class="row">
-                    <div class="col-sm-12 crystal-button"></div>
                 </div>
+
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-8 crystal-button"></div>
+                    <div class="col-sm-2"></div>
+                </div>
+
             </div>
         </div>
     </div>
