added more style

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Crystal Collector</title>
 </head>
 <body>
-
-    <div class="jumbotron">
-        <h1 class="text-center">Crystal Collector</h1>
-    </div>
-
     <div class="container">
+        <div class = "row">
+            <div class="col-sm-12 jumbotron" id="jumbotron">
+                <h1 class="text-center">Crystal Collector</h1>
+            </div>
+        </div>
         <div class="row">
             <div class="col-sm-6 instructions">
                 <h3>How to Play</h3>
@@ -40,14 +40,14 @@
                 <div class="row">
                     <div class="col-sm-2"></div>
                     <div class="col-sm-4">
-                        <h4 class="wins-loss">Wins: 
+                        <h5 class="wins-loss">Wins: 
                         <br>
-                        <span id="wins-count">0</span></h4>
+                        <span id="wins-count">0</span></h5>
                     </div>
                     <div class="col-sm-4">
-                        <h4 class="wins-loss">Losses: 
+                        <h5 class="wins-loss">Losses: 
                         <br>
-                        <span id="losses-count">0</span></h4>
+                        <span id="losses-count">0</span></h5>
                     </div>
                     <div class="col-sm-2"></div> 
                 </div>
