added more style

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <title>Crystal Collector</title>
 </head>
 <body>
+    <div class="col-sm-12 jumbotron" id="jumbotron">
+        <h1 class="text-center">Crystal Collector</h1>
+    </div>
+
     <div class="container">
-        <div class = "row">
-            <div class="col-sm-12 jumbotron" id="jumbotron">
-                <h1 class="text-center">Crystal Collector</h1>
-            </div>
-        </div>
         <div class="row">
             <div class="col-sm-6 instructions">
                 <h3>How to Play</h3>
@@ -25,8 +24,7 @@
 
             <div class= "col-sm-6">
                 <div class="row">
-                    <div class=col-sm-3></div>
-                    <div class ="col-sm-6">
+                    <div class=col-sm-12>
                         <h4 class="target-number">Target Number: 
                         <br>
                         <span id="game-number"></span></h4>
@@ -34,7 +32,6 @@
                         <br>
                         <span id="user-added-number">0</span></h4>
                     </div>
-                    <div class="col-sm-3"></div>
                 </div>
     
                 <div class="row">
@@ -53,9 +50,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-8 crystal-button"></div>
-                    <div class="col-sm-2"></div>
+                    <div class="col-sm-12 crystal-button"></div>
                 </div>
 
             </div>
