More style code added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Diplomata|Rye" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Crystal Collector</title>
 </head>
@@ -19,8 +19,16 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 instructions">
-                <h3>How to Play</h3>
-                <p>Click to crystals until the target number is reached</p>
+                <h4>How to Play</h4>
+                <p>Each of the four crystals holds a hidden number between 1 and 12.</p>
+                <p>Add these numbers to try and match your current score to the given
+                    target number.</p>
+                <p>If your score matches the target, you win.</p>
+                <p>If your score goes over the target, you lose.</p>
+                <p>The target number and value of each crystal will 
+                    change every round.</p>
+                <p>Click any crystal to begin.</p>
+                
             </div>
 
             <div class= "col-sm-6">
