added font and removed line breaks

--- a/index.html
+++ b/index.html
@@ -36,26 +36,22 @@
             <div class= "col-sm-6">
                 <div class="row">
                     <div class=col-sm-12>
-                        <h4 class="target-number">Target Number: 
-                        <br>
-                        <span id="game-number"></span></h4>
-                        <h4 class="total-score">Current Score: 
-                        <br>
-                        <span id="user-added-number">0</span></h4>
+                        <div class="target-number"><h4>Target Number: </h4>
+                        <h3><span id="game-number"></span></div></h3>
+                        <div class="total-score"><h4>Current Score:  </h4>
+                        <h3><span id="user-added-number">0</span></div></h3>
                     </div>
                 </div>
     
                 <div class="row">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-5">
-                        <h5 class="wins-loss">Wins: 
-                        <br>
-                        <span id="wins-count">0</span></h5>
+                        <div class="wins-loss"><h5>Wins: </h5>
+                        <h6><span id="wins-count">0</span></div></h6>
                     </div>
                     <div class="col-sm-5">
-                        <h5 class="wins-loss">Losses: 
-                        <br>
-                        <span id="losses-count">0</span></h5>
+                        <div class="wins-loss"><h5>Losses: </h5>
+                        <h6><span id="losses-count">0</span></div></h6> 
                     </div>
                     <div class="col-sm-1"></div> 
                 </div>
